cursive-bootstrap/tests/ui/E-CON/E-CON-0225.cursive
// RUN: compile-fail
// DIAG: E-CON-0225
// SPEC: 15.3
// DESC: Error type not compatible in yield from

procedure inner() -> Async<(), (), i32, string@View> {
    return 42
}

procedure outer() -> Async<(), (), i32, ()> {
    yield from inner()? //~ ERROR E-CON-0225
    return 0
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
